# vsgPoints

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
applications/: CMakeLists.txt
applications/pointselection/: CMakeLists.txt  pointselection.cpp
applications/vsggeneratepoints/: BrickBuilder.cpp  BrickBuilder.h  CMakeLists.txt  vsggeneratepoints.cpp
applications/vsgpoints/: CMakeLists.txt  ConvertMeshToPoints.cpp  ConvertMeshToPoints.h  vsgpoints.cpp
applications/vsgpoints_3dc/: CMakeLists.txt  vsgpoints_3dc.cpp
applications/vsgpoints_brick/: CMakeLists.txt  vsgpoints_brick.cpp
applications/vsgpoints_example/: CMakeLists.txt  ConvertMeshToPoints.cpp  vsgpoints_example.cpp
applications/vsgpoints_raw/: .vsgpoints_raw.cpp.kate-swp  CMakeLists.txt  vsgpoints_raw.cpp
data/shaders/: brick.vert  brick_flat_shaded.frag  pointsprites.vert  standard_phong.frag
include/vsgPoints/: AsciiPoints.h  BIN.h  Brick.h  BrickBuilder.h  BrickShaderSet.h  Bricks.h  Export.h  Settings.h  create.h
include/vsgPoints/utils/: PointsPolytopeIntersector.h  PolygonIntersector.h
src/: CMakeLists.txt
src/vsgPoints/: AsciiPoints.cpp  BIN.cpp  Brick.cpp  BrickBuilder.cpp  BrickShaderSet.cpp  Bricks.cpp  CMakeLists.txt  create.cpp  vsgPointsConfig.cmake.in
src/vsgPoints/shaders/: assimp_flat_shaded_frag.cpp  assimp_phong_frag.cpp  brick_flat_frag.cpp  brick_flat_shaded_frag.cpp  brick_phong_frag.cpp  brick_vert.cpp  standard_flat_shaded_frag.cpp  standard_phong_frag.cpp
src/vsgPoints/utils/: PointsPolytopeIntersector.cpp  PolygonIntersector.cpp
